--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript"></script></script>
   <script type="text/javascript">
     <!-- sample.md -->
-    var slideshow = remark.create({sourceUrl: "/script/data-trimming.md"});
+    var slideshow = remark.create({sourceUrl: "./script/data-trimming.md"});
   </script>
 </body>
 </html>
